# solutions

./: .gitignore  README.md  README_PUSH.md  checks_05_2026.md  push_to_github.py  push_to_github.sh
arbitrage-monitor-tool/: README.md  arbitrage_monitor.py
automated-client-site-health-monitor/: README.md  site_health_monitor.py
automated-dividend-tracker/: README.md  dividend_tracker.py  requirements.txt
automated-stock-alert-bot/: README.md  stock_alert_bot.py
automated-stock-screener/: README.md  fundamental_screener.py
bulk-file-renamer-tool/: README.md  bulk_renamer.py
chain-alert-bot/: README.md  chain_alert_bot.py  requirements.txt
chilean-congress-vote-scraper/: README.md  chilean_congress_scraper.py  requirements.txt
crypto-whale-tracker/: README.md  crypto_whale_tracker.py  requirements.txt
crypto-whale-tracker-bot/: README.md  whale_tracker.py
crypto-whale-tracker-tool/: README.md  crypto_whale_tracker.py
custom-stock-screener/: README.md  requirements.txt  stock_screener.py
dynamic-directory-scraper/: README.md  dynamic_scraper.py
dynamic-spa-watcher/: README.md  spa_watcher.py
email-data-extractor/: README.md  email_data_extractor.py
fair-value-watchlist-tool/: README.md  fair_value_watch.py
financial-data-tool/: README.md  fundamental_aggregator.py
first-mover-alert-bot/: README.md  first_mover_bot.py
rsi-alert-system-rust/: .gitignore  Cargo.toml  README.md  rsi-alert-system-rust-trimmed.webm  run.sh
rsi-alert-system-rust/src/: binance.rs  config.rs  main.rs  rsi.rs
rsi-alert-system-rust/static/: index.html
(+86 files in other folders)
