[package]
name = "rsi-alert-system"
version = "0.1.0"
edition = "2021"
description = "Lightweight RSI monitor for cryptocurrencies using Binance API"

[dependencies]
axum = { version = "0.7", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
